pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingParenthesizedTypeDelimiter.pkl
res1: ((String) -> String | List<String>
res2 = 42